test/bad/classes/name02.px

class A def
    Int x

A, A = A, A
